<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:elevation="0dp"
        android:background="@color/invisible">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_history_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_gravity="center|top"
            app:singleSelection="true"
            app:layout_scrollFlags="scroll|enterAlways">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all_history"
                style="@style/chip_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chip_all_history"
                android:layout_marginEnd="@dimen/margin_2"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_rune_day"
                style="@style/chip_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/chip_rune_day_title"
                android:layout_marginEnd="@dimen/margin_2"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_fortune"
                style="@style/chip_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_fortune"
                android:layout_marginStart="@dimen/margin_2"/>
        </com.google.android.material.chip.ChipGroup>
    </com.google.android.material.appbar.AppBarLayout>
    <ProgressBar
        android:id="@+id/pb_history_fragment"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_gravity="center"
        android:visibility="visible" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_15"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>